@@ -87,6 +87,7 @@ typedef enum {
 	COMP_HTTP_HOST,
 	COMP_HTTP_REFERER,
 	COMP_HTTP_USER_AGENT,
+	COMP_HTTP_LANGUAGE,
 	COMP_HTTP_COOKIE,
 	COMP_HTTP_REMOTE_IP,
 	COMP_HTTP_QUERY_STRING,
