@@ -37,6 +37,7 @@ NEWS
   * Fix error handling in freebsd-sendfile (fixes #1813)
   * Silenced the annoying "request timed out" warning, enable with the "debug.log-timeouts" option (fixes #1529)
   * Allow tabs in header values (fixes #1822)
+  * Added Language conditional (fixes #1119); patch by petar
 
 - 1.4.20 - 2008-09-30
 
